panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_function__test_error_array_of_incomplete_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_function/test_error_array_of_incomplete_type.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: array with incomplete element type `void`
   ╭─[panko/tests/cases/decl_in_function/test_error_array_of_incomplete_type.c:2:5]
   │
 2 │     void array[42];
   │     ──┬─  
   │       ╰─── array element types must be complete
───╯

Error: cannot declare variable `array` with incomplete type `array<void; 42>`
   ╭─[panko/tests/cases/decl_in_function/test_error_array_of_incomplete_type.c:2:10]
   │
 2 │     void array[42];
   │          ──┬──  
   │            ╰──── declared here
───╯
